adjust letter spacing to prevent item in toc from reflowing when active

--- a/src/css/toc.css
+++ b/src/css/toc.css
@@ -62,6 +62,7 @@
 
 .toc a.is-active {
   font-weight: var(--weight-medium);
+  letter-spacing: -0.0065em;
 }
 
 .toc a.is-active:focus,
